# LLM_2024_Upskill

./: .gitignore  README.md
AdHoc/: Clauses_Amendments_30_05_2024.md  app_nick_flesh_kincaid.ipynb  cass_ibm_compare.ipynb  i125-3301-15_10-2021_zz-en - International Program License Agreement.docx
DLAI_Building_Agentic_RAG_w_Llamaindex/: LLamaindex Rag-agentsAll Notebooks.ipynb  test.ipynb  utils.py
DLAI_CrewAI_Multi_Agent_Systems/: **unusedL3_customer_support.ipynb  **unusedL4_tools_customer_outreach.ipynb  **unusedL5_tasks_event_planning.ipynb  **unusedL7_job_application_crew.ipynb  0_intro.ipynb  L0_All_Lessons.ipynb  interview_materials.md  marketing_report.md  richard_resume.md  tailored_resume.md  venue_details.json
DLAI_CrewAI_Multi_Agent_Systems/GnT_refactor_May_24/: .env  config.py  experim_05_24.ipynb
DLAI_CrewAI_Multi_Agent_Systems/db/: chroma.sqlite3
DLAI_Langgraph_Agents/: Lesson_1_Simple ReAct Agent.ipynb  Lesson_2_Student_LangGraph_Components.ipynb  Lesson_3_Student_Agentic_Search.ipynb  Lesson_4_Student_Agentic_Persistance_w_Thread.ipynb  Lesson_5_Student_Human_In_The_Loop.ipynb  notes.md  requirements.txt
Langchain Agents/: pyproject.toml
Langchain Agents/0-TrickSumo-FirstExample/: agent_toolkit.py  data.csv  main.py
